--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,10 +18,11 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.css");
 
 :not(pre)>code[class*=language-], pre[class*=language-] {
-	code {background: transparent;}
+//	code {background: transparent;}
 }
 
 pre[class*=language-]>code[data-language] {
 	// Auto scrollbars removal
 	overflow: auto;
 }
+
